# Monte-Carlo-Ray-Tracer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  uncrustify.cfg
include/: AABB.hpp  Camera.h  KDTree.h  Material.hpp  Math.hpp  Mesh.hpp  Ray.hpp  Renderer.h  Scene.h  Scene.h.rej  Triangle.h  Triangle.h.rej
resources/scene01/: scene01.mtl
resources/scene02/: scene02.mtl
resources/scene03/: scene03.mtl
resources/scene04/: house.mtl  scene04.mtl
src/: Camera.cpp  Camera.cpp.rej  KDTree.cpp  Main.cpp  Renderer.cpp  Renderer.cpp.rej  Scene.cpp  Triangle.cpp  Triangle.cpp.rej
